tests/_support/override/classes/error/ErrorHandler.php
<?php

namespace Thirtybees\Core\Error;

class ErrorHandler extends ErrorHandlerCore
{
}
